--- a/_includes/default.njk
+++ b/_includes/default.njk
@@ -1,22 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <title>
-      {% block title %}Does it work?{% endblock %}
+        {% block title %}{{ title }}{% endblock %}
     </title>
     <meta charset="UTF-8"/>
+    <!-- Open graph -->
     {% if description %}
-      <meta name="description" content="{{description}}"/>
+        <meta property="og:description" name="description" content="{{description}}"/>
     {% endif %}
+    {% if title %}
+        <meta property="og:title" name="title" content="{{ title }}">
+    {% else %}
+        <meta property="og:title" name="title" content="C&H  / {{ client }}">
+    {% endif %}
+
+    <meta property="og:type" content="article">
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover"/>
     <link rel="stylesheet" href="/style.css?v={% version %}"/>
     {% block head %}{% endblock %}
-    <script defer src="/js/alpine.js?v={% version %}"></script>
-  </head>
-  <body>
-    {% block content %}
-      {{ content | safe }}
-    {% endblock %}
-  </body>
+</head>
+
+    <body>
+        {% include "component/menu.njk" %}
+        {% block content %}
+            {{ content | safe }}
+        {% endblock %}
+        <grid class="grid-columns">
+            <div id="w-node-013b0a8ef39f-c26fb154" class="grid-columns-line"></div>
+            <div id="w-node-013b0a8ef39f-c26fb154" class="grid-columns-line"></div>
+            <div id="w-node-013b0a8ef39f-c26fb154" class="grid-columns-line"></div>
+            <div id="w-node-013b0a8ef39f-c26fb154" class="grid-columns-line"></div>
+            <div id="w-node-013b0a8ef39f-c26fb154" class="grid-columns-line"></div>
+            <div id="w-node-013b0a8ef39f-c26fb154" class="grid-columns-line"></div>
+            <div id="w-node-013b0a8ef39f-c26fb154" class="grid-columns-line"></div>
+            <div id="w-node-013b0a8ef39f-c26fb154" class="grid-columns-line"></div>
+            <div id="w-node-013b0a8ef39f-c26fb154" class="grid-columns-line"></div>
+            <div id="w-node-013b0a8ef39f-c26fb154" class="grid-columns-line"></div>
+            <div id="w-node-013b0a8ef39f-c26fb154" class="grid-columns-line"></div>
+            <div id="w-node-013b0a8ef39f-c26fb154" class="grid-columns-line"></div>
+        </grid>
+    </body>
 </html>
