--- a/_includes/default.njk
+++ b/_includes/default.njk
@@ -41,5 +41,8 @@
             <div id="w-node-013b0a8ef39f-c26fb154" class="grid-columns-line"></div>
             <div id="w-node-013b0a8ef39f-c26fb154" class="grid-columns-line"></div>
         </grid>
+
+        {% include "section/footer.njk" %}
+
     </body>
 </html>
