--- a/_includes/section/testimonials.njk
+++ b/_includes/section/testimonials.njk
@@ -12,9 +12,11 @@
 
     <div class="grid-default pl-12 pr-12 border-t border-b border-gray-900">
 
-       {% for client in collections.sortedClients %}
-            <div class="col-span-3 border-r border-b border-gray-900 py-16 px-24 justify-center items- -middle flex">
-                <img src="{{ client.data.img }}" alt="{{ client.data.name }}">
+       {% for testimonial in collections.testimonial %}
+            <div class="col-span-12 border-r border-b border-gray-900 py-16 px-24 justify-center items- -middle flex">
+                {{ testimonial.data.para1 }}
+                {{ testimonial.data.person }}
+                {{ testimonial.data.client }}
             </div>
         {% endfor %}
 
