--- a/_includes/section/footer.njk
+++ b/_includes/section/footer.njk
@@ -1,23 +1,18 @@
 <div class="bg-gray-900">
     <div class="pl-12 pr-12">
         <div class="grid-default pt-5 pb-6 gap-y-3">
-            <div class="order-last lg:order-first  col-span-12 lg:col-span-3 flex align-middle">
-                <p class="text-xl text-white uppercase font-mono xl:mt-0">C & H © Copyright 2023</p>
+            <div class="order-last lg:order-first col-span-12 lg:col-span-3 flex align-middle items-center">
+                <p class="text-lg text-white uppercase font-mono xl:mt-0">C & H © Copyright 2023</p>
             </div>
 
             <div class="col-span-12 lg:col-span-7 grid grid-cols-1">
                 <ul class="flex gap-4 sm:gap-6 flex align-middle">
                     <li>
-                        <a href="/" title="" class="text-xl text-neutral-600 transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80"> Home </a>
+                        <a href="/" title="" class="text-lg text-white uppercase font-mono transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80"> Home </a>
                     </li>
+                    
                     <li>
-                        <a href="/work" title="" class="text-xl text-neutral-600 transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80"> Work </a>
-                    </li>
-                    <li>
-                        <a href="/#capabilities" title="" class="text-xl text-neutral-600 transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80"> Capabilities </a>
-                    </li>
-                    <li>
-                        <a href="mailto:hi@carberryhanrahan.com" title="" class="text-xl text-neutral-600 transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80">
+                        <a href="mailto:hi@carberryhanrahan.com" title="" class="text-lg text-white uppercase font-mono transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80">
                         Contact
                         </a>
                     </li>
