--- a/_includes/section/cta.njk
+++ b/_includes/section/cta.njk
@@ -1,23 +1,21 @@
-<div class="grid-default border-t mt-40 pt-8">
-    <div class="col-span-12 lg:col-span-3 mb-6">
-        <h3 class="text-xl text-gray-600 lg:text-gray-900">
-            Availability
-        </h2>
+<div class="grid-default bg-black pb-16">
+    <div class="col-span-12 mt-12 pt-8">
+        <div class="pl-12 pr-12">
+            <div class="col-span-7 lg:col-span-5 mb-6 pl-8 pr-8">
+                <h2 class="text-6xl uppercase text-white font-medium">
+                    Let us help you Find your angle
+                </h2>
+            </div>
+
+        </div>
     </div>
 
-    <div class="col-span-12 lg:col-span-8 grid grid-cols-1">
-        <div class="flex flex-col">
-            <h2 class="text-xl">
-                We’re open for business and new collaborations in Q3 2023
-            </h2>
-
+    <div class="col-span-12 lg:col-span-8 pl-12 pr-12 ">
+        <div class="pl-8 pr-8 flex flex-col">
+            
             <div class="flex flex-col mt-8 space-y-4 sm:space-y-0 sm:space-x-4 sm:flex-row lg:mt-8 sm:px-0">
-                <a data-savvycal-embed class="btn btn-primary" role="button" href="https://savvycal.com/ciaran/chat">
+                <a data-savvycal-embed class="btn btn-secondary" role="button" href="https://savvycal.com/ciaran/chat">
                     Book a call
-                </a>
-
-                <a class="btn btn-secondary" role="button" href="mailto:ciaran@carberryhanrahan.com">
-                    Get in touch
                 </a>
             </div>
         </div>
