--- a/_includes/section/footer.njk
+++ b/_includes/section/footer.njk
@@ -1,23 +1,24 @@
-<div class="bg-gray-900">
+<div class="bg-black">
     <div class="pl-12 pr-12">
-        <div class="grid-default pt-5 pb-6 gap-y-3">
-            <div class="order-last lg:order-first col-span-12 lg:col-span-3 flex align-middle items-center">
-                <p class="text-lg text-white uppercase font-mono xl:mt-0">C & H © Copyright 2023</p>
+        <div class="grid-default pt-5 pb-5 pl-8 pr-8 gap-y-3">
+            <div class="order-last lg:order-first col-span-12 lg:col-span-6 flex align-middle items-center">
+                <span class="text-lg text-white uppercase font-mono leading-none">Veblen Giffen © Copyright 2023</span>
             </div>
 
-            <div class="col-span-12 lg:col-span-7 grid grid-cols-1">
-                <ul class="flex gap-4 sm:gap-6 flex align-middle">
+             <div class="order-last lg:order-first col-span-12 lg:col-span-3 flex align-middle items-center">
+                 <ul class="flex gap-4 sm:gap-6 flex items-center align-middle">
                     <li>
-                        <a href="/" title="" class="text-lg text-white uppercase font-mono transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80"> Home </a>
+                        <a href="/" title="" class="leading-none text-lg text-white uppercase font-mono transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80"> Terms </a>
                     </li>
                     
                     <li>
-                        <a href="mailto:hi@carberryhanrahan.com" title="" class="text-lg text-white uppercase font-mono transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80">
-                        Contact
+                        <a href="mailto:hi@carberryhanrahan.com" title="" class="leading-none  text-lg text-white uppercase font-mono transition-all duration-200 hover:text-opacity-80 focus:text-opacity-80">
+                        Privacy
                         </a>
                     </li>
                 </ul>
             </div>
+
         </div>
     </div>
 </div>
