--- a/_includes/section/testimonials.njk
+++ b/_includes/section/testimonials.njk
@@ -1,27 +1,19 @@
 <section id="capabilities">
-    <div class="mt-12 pt-8">
-        <div class="pl-12 pr-12">
-            <div class="col-span-12 lg:col-span-3 mb-6 pl-8 pr-8">
-                <h2 class="text-6xl uppercase font-medium">
-                    Our clients
-                </h2>
-            </div>
 
-        </div>
-    </div>
-
-    <div class="grid-default pl-12 pr-12 border-t border-b border-gray-900">
+    <div class="grid-default pl-12 pr-12 border-gray-900 pb-16">
 
        {% for testimonial in collections.testimonial %}
-            <div class="col-span-12 border-r border-b border-gray-900 py-16 px-24 justify-center items- -middle flex">
-                {{ testimonial.data.para1 }}
-                {{ testimonial.data.person }}
-                {{ testimonial.data.client }}
-            </div>
+            <blockquote class="flex flex-col col-span-7 pt-16 px-8 justify-center items- -middle flex">
+                <p class="uppercase font-medium text-2xl leading-tight mb-4">
+                    {{ testimonial.data.para1 }}
+                </p>
+                <figcaption>
+                <p class="font-mono text-lg leading-none uppercase">{{ testimonial.data.person }}</p>
+                <p class="font-mono text-lg leading-none uppercase">{{ testimonial.data.role }}, {{ testimonial.data.client }}</p>
+                </figcaption>
+            </blockquote>
         {% endfor %}
-
        
     </div>
     
-
 </section>
