--- a/index.njk
+++ b/index.njk
@@ -7,7 +7,7 @@ title: Veblen Giffen
 
 {% block content %}
 
-<div class="w-full mt-24 -mb-1 pl-12 pr-12">
+<div class="w-full mt-24 pl-12 pr-12 site-title">
     <svg viewBox="0 0 1360 132" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M0.260742 2.37766H24.6867L57.2547 104.153L88.9377 2.37766H112.656L68.7597 130.703H44.6877L0.260742 2.37766Z" fill="#1C1C19"/>
         <path d="M127.474 130.703V2.37766H218.275V21.1397H149.953V55.4777H214.558V74.0627H149.953V111.764H218.275V130.703H127.474Z" fill="#1C1C19"/>
@@ -22,11 +22,10 @@ title: Veblen Giffen
         <path d="M1142.87 130.703V2.37766H1233.67V21.1397H1165.35V55.4777H1229.96V74.0627H1165.35V111.764H1233.67V130.703H1142.87Z" fill="#1C1C19"/>
         <path d="M1359.74 130.703H1329.65L1275.31 28.2197V130.703H1253.54V2.37766H1283.63L1337.97 104.861V2.37766H1359.74V130.703Z" fill="#1C1C19"/>
     </svg>
-
 </div>
 
-<div class="video-container">
-</div>
+
+{% include "section/video.njk" %}
 
 {% include "section/marketing.njk" %}
 
