--- a/_includes/component/menu.njk
+++ b/_includes/component/menu.njk
@@ -10,7 +10,7 @@
             </a>
         </div>
         
-        <div class="font-mono uppercase">
+        <div class="font-mono uppercase text-lg leading-none">
             <span class="flex items-center">{{ description }}</span>
         {# {% for item in globalData.items %}
                 <li class="flex items-center {% if item.active in page.url %} current-menu-item {% endif %}">
@@ -18,6 +18,6 @@
             </li>
         {% endfor %} #}
         </div>
-        <span class="pr-8 flex items-center font-mono uppercase">Menu</span>
+        <span class="pr-8 flex items-center font-mono uppercase text-lg leading-none">Menu</span>
     </ul>
 </nav>
