--- a/_includes/section/cta.njk
+++ b/_includes/section/cta.njk
@@ -1,12 +1,26 @@
 <div class="grid-default bg-black pb-16">
     <div class="col-span-12 mt-12 pt-8">
-        <div class="pl-12 pr-12">
-            <div class="col-span-7 lg:col-span-5 mb-6 pl-8 pr-8">
+        <div class="pl-12 pr-12 grid grid-cols-12">
+            <div class="col-span-12 lg:col-span-7 mb-6 pl-8 pr-8">
                 <h2 class="text-6xl uppercase text-white font-medium">
                     Let us help you Find your angle
                 </h2>
             </div>
 
+            <div class="col-span-12 lg:col-span-9 gap-6 flex flex-row items-center mb-6 pl-8 pr-8">
+                <p class="text-xl text-white">
+                    Increase brand affinity
+                </p>
+                <p class="text-xl  text-white">
+                    Build customer loyalty
+                </p>
+                <p class="text-xl  text-white">
+                    Increase conversion
+                </p>
+                <p class="text-xl  text-white">
+                    Reduce ad spend
+                </p>
+            </div>
         </div>
     </div>
 
