--- a/_includes/section/marketing.njk
+++ b/_includes/section/marketing.njk
@@ -1,4 +1,4 @@
-<section id="capabilities" class="border-b border-gray-900">
+<section id="marketing" class="border-b border-gray-900">
     <div class="mt-12 pt-8">
         <div class="pl-12 pr-12">
             <div class="col-span-12 lg:col-span-3 mb-6 pl-8 pr-8">
@@ -10,117 +10,102 @@
         </div>
     </div>
 
-    <div class="grid-default py-6 pl-12 pr-12 border-t border-gray-900">
-        <div class="col-span-1 pl-8">
-            <p class="text-base mt-1 uppercase lg:text-red-500 font-mono">
+    <div class="grid-default py-8 pl-12 pr-12 border-t border-gray-900">
+        <div class="col-span-1 pl-8 flex items-center">
+            <p class="text-base mt-1 uppercase lg:text-red-500 font-mono leading-none">
                 01
             </p>
         </div>
 
         <div class="col-span-3">
-            <h3 class="text-2xl uppercase lg:text-gray-900 font-medium">
+            <h3 class="text-2xl uppercase lg:text-gray-900 leading-none font-medium">
                 Relevance
             </h3>
         </div>
         
-        <div class="col-span-12 lg:col-span-7">
-            <div class="md:mt-0">
-                <p class="text-xl font-mono uppercase">
-                    Be in the right place at the right time with more copy though
-                </p>
-                
-            </div>
+        <div class="col-span-12 lg:col-span-7 flex items-center">
+            <p class="text-xl font-mono uppercase leading-none">
+                Be in the right place at the right time
+            </p>
         </div>
     </div>
-    <div class="grid-default py-6 pl-12 pr-12 border-t border-gray-900">
-        <div class="col-span-1 pl-8">
-            <p class="text-base mt-1 uppercase lg:text-red-500 font-mono">
+    <div class="grid-default py-8 pl-12 pr-12 border-t border-gray-900">
+        <div class="col-span-1 pl-8 flex items-center">
+            <p class="text-base mt-1 uppercase lg:text-red-500 font-mono leading-none">
                 02
             </p>
         </div>
 
         <div class="col-span-3">
-            <h3 class="text-2xl uppercase lg:text-gray-900 font-medium">
+            <h3 class="text-2xl uppercase lg:text-gray-900 leading-none font-medium">
                 Distribution
             </h3>
         </div>
         
-        <div class="col-span-12 lg:col-span-7">
-            <div class="md:mt-0">
-                <p class="text-xl font-mono uppercase">
-                    Be in the right place at the right time with more copy though
-                </p>
-                
-            </div>
+        <div class="col-span-12 lg:col-span-7 flex items-center">
+            <p class="text-xl font-mono uppercase leading-none">
+                Be in the right place at the right time
+            </p>
         </div>
     </div>
     
-    <div class="grid-default py-6 pl-12 pr-12 border-t border-gray-900">
-        <div class="col-span-1 pl-8">
-            <p class="text-base mt-1 uppercase lg:text-red-500 font-mono">
+    <div class="grid-default py-8 pl-12 pr-12 border-t border-gray-900">
+        <div class="col-span-1 pl-8 flex items-center">
+            <p class="text-base mt-1 uppercase lg:text-red-500 font-mono leading-none">
                 03
             </p>
         </div>
 
         <div class="col-span-3">
-            <h3 class="text-2xl uppercase lg:text-gray-900 font-medium">
+            <h3 class="text-2xl uppercase lg:text-gray-900 leading-none font-medium">
                 B2B
             </h3>
         </div>
         
-        <div class="col-span-12 lg:col-span-7">
-            <div class="md:mt-0">
-                <p class="text-xl font-mono uppercase">
-                    Be in the right place at the right time with more copy though
-                </p>
-                
-            </div>
+        <div class="col-span-12 lg:col-span-7 flex items-center">
+            <p class="text-xl font-mono uppercase leading-none">
+                Be in the right place at the right time
+            </p>
         </div>
     </div>
 
-    <div class="grid-default py-6 pl-12 pr-12 border-t border-gray-900">
-        <div class="col-span-1 pl-8">
-            <p class="text-base mt-1 uppercase lg:text-red-500 font-mono">
+    <div class="grid-default py-8 pl-12 pr-12 border-t border-gray-900">
+        <div class="col-span-1 pl-8 flex items-center">
+            <p class="text-base mt-1 uppercase lg:text-red-500 font-mono leading-none">
                 04
             </p>
         </div>
 
         <div class="col-span-3">
-            <h3 class="text-2xl uppercase lg:text-gray-900 font-medium">
+            <h3 class="text-2xl uppercase lg:text-gray-900 leading-none font-medium">
                 Transformation
             </h3>
         </div>
         
-        <div class="col-span-12 lg:col-span-7">
-            <div class="md:mt-0">
-                <p class="text-xl font-mono uppercase">
-                    Be in the right place at the right time with more copy though
-                </p>
-                
-            </div>
+        <div class="col-span-12 lg:col-span-7 flex items-center">
+            <p class="text-xl font-mono uppercase leading-none">
+                Be in the right place at the right time
+            </p>
         </div>
     </div>
 
-    <div class="grid-default py-6 pl-12 pr-12 border-t border-gray-900">
-        <div class="col-span-1 pl-8">
-            <p class="text-base mt-1 uppercase lg:text-red-500 font-mono">
+    <div class="grid-default py-8 pl-12 pr-12 border-t border-gray-900">
+        <div class="col-span-1 pl-8 flex items-center">
+            <p class="text-base mt-1 uppercase lg:text-red-500 font-mono leading-none">
                 05
             </p>
         </div>
 
         <div class="col-span-3">
-            <h3 class="text-2xl uppercase lg:text-gray-900 font-medium">
+            <h3 class="text-2xl uppercase lg:text-gray-900 leading-none font-medium">
                 (Brand) DNA
             </h3>
         </div>
         
-        <div class="col-span-12 lg:col-span-7">
-            <div class="md:mt-0">
-                <p class="text-xl font-mono uppercase">
-                    Be in the right place at the right time with more copy though
-                </p>
-                
-            </div>
+        <div class="col-span-12 lg:col-span-7 flex items-center">
+            <p class="text-xl font-mono uppercase leading-none">
+                Be in the right place at the right time
+            </p>
         </div>
     </div>
 
