--- a/_includes/section/footer.njk
+++ b/_includes/section/footer.njk
@@ -8,17 +8,17 @@
                 </h2>
             </div>
 
-            <div class="col-span-12 lg:col-span-9 gap-6 flex flex-row items-center mb-6 pl-8 pr-8">
-                <p class="text-xl text-white">
+            <div class="col-span-12 lg:col-span-9 gap-6 flex flex-row items-center mt-4 mb-6 pl-8 pr-8">
+                <p class="text-xl font-medium text-white">
                     Increase brand affinity
                 </p>
-                <p class="text-xl  text-white">
+                <p class="text-xl font-medium text-white">
                     Build customer loyalty
                 </p>
-                <p class="text-xl  text-white">
+                <p class="text-xl font-medium text-white">
                     Increase conversion
                 </p>
-                <p class="text-xl  text-white">
+                <p class="text-xl font-medium text-white">
                     Reduce ad spend
                 </p>
             </div>
