--- a/_includes/section/marketing.njk
+++ b/_includes/section/marketing.njk
@@ -17,15 +17,15 @@
             </p>
         </div>
 
-        <div class="col-span-3">
+        <div class="col-span-3 flex items-center">
             <h3 class="text-2xl uppercase lg:text-gray-900 leading-none font-medium">
                 Relevance
             </h3>
         </div>
         
-        <div class="col-span-12 lg:col-span-7 flex items-center">
-            <p class="text-xl font-mono uppercase leading-none">
-                Be in the right place at the right time
+        <div class="col-span-12 lg:col-span-8 flex items-center">
+            <p class="text-lg font-mono uppercase leading-none">
+                Be in the right place, at the right time for the right audience
             </p>
         </div>
     </div>
@@ -36,15 +36,15 @@
             </p>
         </div>
 
-        <div class="col-span-3">
+        <div class="col-span-3 flex items-center">
             <h3 class="text-2xl uppercase lg:text-gray-900 leading-none font-medium">
                 Distribution
             </h3>
         </div>
         
-        <div class="col-span-12 lg:col-span-7 flex items-center">
-            <p class="text-xl font-mono uppercase leading-none">
-                Be in the right place at the right time
+        <div class="col-span-12 lg:col-span-8 flex items-center">
+            <p class="text-lg font-mono uppercase leading-none">
+                Scale your story across the internet
             </p>
         </div>
     </div>
@@ -56,15 +56,15 @@
             </p>
         </div>
 
-        <div class="col-span-3">
+        <div class="col-span-3 flex items-center">
             <h3 class="text-2xl uppercase lg:text-gray-900 leading-none font-medium">
                 B2B
             </h3>
         </div>
         
-        <div class="col-span-12 lg:col-span-7 flex items-center">
-            <p class="text-xl font-mono uppercase leading-none">
-                Be in the right place at the right time
+        <div class="col-span-12 lg:col-span-8 flex items-center">
+            <p class="text-lg font-mono uppercase leading-none">
+                A Content Engine That Builds Trust & Creates Sales Pipeline
             </p>
         </div>
     </div>
@@ -76,15 +76,15 @@
             </p>
         </div>
 
-        <div class="col-span-3">
+        <div class="col-span-3 flex items-center">
             <h3 class="text-2xl uppercase lg:text-gray-900 leading-none font-medium">
                 Transformation
             </h3>
         </div>
         
-        <div class="col-span-12 lg:col-span-7 flex items-center">
-            <p class="text-xl font-mono uppercase leading-none">
-                Be in the right place at the right time
+        <div class="col-span-12 lg:col-span-8 flex items-center">
+            <p class="text-lg font-mono uppercase leading-none">
+                Marketing Is Changing Faster Than Ever, Adapt & Evolve Along With It
             </p>
         </div>
     </div>
@@ -96,15 +96,15 @@
             </p>
         </div>
 
-        <div class="col-span-3">
+        <div class="col-span-3 flex items-center">
             <h3 class="text-2xl uppercase lg:text-gray-900 leading-none font-medium">
                 (Brand) DNA
             </h3>
         </div>
         
-        <div class="col-span-12 lg:col-span-7 flex items-center">
-            <p class="text-xl font-mono uppercase leading-none">
-                Be in the right place at the right time
+        <div class="col-span-12 lg:col-span-8 flex items-center">
+            <p class="text-lg font-mono uppercase leading-none">
+                Unlock what makes your brand a unique, one of a kind.
             </p>
         </div>
     </div>
