--- a/_includes/default.njk
+++ b/_includes/default.njk
@@ -8,7 +8,7 @@
     <!-- Open graph -->
     <meta property="og:description" name="description" content="{{description}}"/>
     <meta property="og:title" name="title" content="{{ title }}">
-    
+    <link rel="icon" href="/src/images/favicon.svg" type="image/svg+xml" />
 
     <meta property="og:type" content="article">
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
@@ -30,7 +30,6 @@
         <grid class="-z-10 absolute">
             {% include "component/grid.njk" %}
         </grid>
-
 
     </body>
 </html>
