--- a/_includes/section/marketing.njk
+++ b/_includes/section/marketing.njk
@@ -1,8 +1,8 @@
 <section id="marketing" class="border-b border-gray-900">
     <div class="mt-12 pt-8">
-        <div class="pl-12 pr-12">
-            <div class="col-span-12 lg:col-span-3 mb-6 pl-8 pr-8">
-                <h2 class="text-6xl uppercase font-medium">
+        <div class="outer-margin">
+            <div class="col-span-12 lg:col-span-3 mb-6 inner-margin">
+                <h2 class="">
                     Modern day marketing
                 </h2>
             </div>
@@ -10,99 +10,99 @@
         </div>
     </div>
 
-    <div class="grid-default py-8 pl-12 pr-12 border-t border-gray-900">
-        <div class="col-span-1 pl-8 flex items-center">
-            <p class="text-base mt-1 uppercase lg:text-red-500 font-mono leading-none">
+    <div class="grid-default py-8 outer-margin border-t border-gray-900 gap-y-2">
+        <div class="col-span-12 lg:col-span-1 inner-margin-mobile flex items-center pl-4">
+            <p class="text-base mt-1 uppercase text-red-500 font-mono leading-none">
                 01
             </p>
         </div>
 
-        <div class="col-span-3 flex items-center">
-            <h3 class="text-2xl uppercase lg:text-gray-900 leading-none font-medium">
+        <div class="col-span-3 flex items-center inner-margin-mobile pl-4 lg:pl-0">
+            <h3 class="text-2xl uppercase text-gray-900 leading-none font-medium mb-2 lg:mb-0">
                 Relevance
             </h3>
         </div>
         
-        <div class="col-span-12 lg:col-span-8 flex items-center">
+        <div class="col-span-12 lg:col-span-8 flex items-center inner-margin-mobile pl-4 lg:pl-0">
             <p class="text-lg font-mono uppercase leading-none">
                 Be in the right place, at the right time for the right audience
             </p>
         </div>
     </div>
-    <div class="grid-default py-8 pl-12 pr-12 border-t border-gray-900">
-        <div class="col-span-1 pl-8 flex items-center">
-            <p class="text-base mt-1 uppercase lg:text-red-500 font-mono leading-none">
+    <div class="grid-default py-8 outer-margin border-t border-gray-900 gap-y-2">
+        <div class="col-span-12 lg:col-span-1 inner-margin-mobile flex items-center pl-4">
+            <p class="text-base mt-1 uppercase text-red-500 font-mono leading-none">
                 02
             </p>
         </div>
 
-        <div class="col-span-3 flex items-center">
-            <h3 class="text-2xl uppercase lg:text-gray-900 leading-none font-medium">
+        <div class="col-span-3 flex items-center inner-margin-mobile pl-4 lg:pl-0">
+            <h3 class="text-2xl uppercase text-gray-900 leading-none font-medium mb-2 lg:mb-0">
                 Distribution
             </h3>
         </div>
         
-        <div class="col-span-12 lg:col-span-8 flex items-center">
+        <div class="col-span-12 lg:col-span-8 flex items-center inner-margin-mobile pl-4 lg:pl-0">
             <p class="text-lg font-mono uppercase leading-none">
                 Scale your story across the internet
             </p>
         </div>
     </div>
     
-    <div class="grid-default py-8 pl-12 pr-12 border-t border-gray-900">
-        <div class="col-span-1 pl-8 flex items-center">
-            <p class="text-base mt-1 uppercase lg:text-red-500 font-mono leading-none">
+    <div class="grid-default py-8 outer-margin border-t border-gray-900 gap-y-2">
+        <div class="col-span-12 lg:col-span-1 inner-margin-mobile flex items-center pl-4">
+            <p class="text-base mt-1 uppercase text-red-500 font-mono leading-none">
                 03
             </p>
         </div>
 
-        <div class="col-span-3 flex items-center">
-            <h3 class="text-2xl uppercase lg:text-gray-900 leading-none font-medium">
+        <div class="col-span-3 flex items-center inner-margin-mobile pl-4 lg:pl-0">
+            <h3 class="text-2xl uppercase text-gray-900 leading-none font-medium mb-2 lg:mb-0">
                 B2B
             </h3>
         </div>
         
-        <div class="col-span-12 lg:col-span-8 flex items-center">
+        <div class="col-span-12 lg:col-span-8 flex items-center inner-margin-mobile pl-4 lg:pl-0">
             <p class="text-lg font-mono uppercase leading-none">
                 A Content Engine That Builds Trust & Creates Sales Pipeline
             </p>
         </div>
     </div>
 
-    <div class="grid-default py-8 pl-12 pr-12 border-t border-gray-900">
-        <div class="col-span-1 pl-8 flex items-center">
-            <p class="text-base mt-1 uppercase lg:text-red-500 font-mono leading-none">
+    <div class="grid-default py-8 outer-margin border-t border-gray-900 gap-y-2">
+        <div class="col-span-12 lg:col-span-1 inner-margin-mobile flex items-center pl-4">
+            <p class="text-base mt-1 uppercase text-red-500 font-mono leading-none">
                 04
             </p>
         </div>
 
-        <div class="col-span-3 flex items-center">
-            <h3 class="text-2xl uppercase lg:text-gray-900 leading-none font-medium">
+        <div class="col-span-3 flex items-center inner-margin-mobile pl-4 lg:pl-0">
+            <h3 class="text-2xl uppercase text-gray-900 leading-none font-medium mb-2 lg:mb-0">
                 Transformation
             </h3>
         </div>
         
-        <div class="col-span-12 lg:col-span-8 flex items-center">
+        <div class="col-span-12 lg:col-span-8 flex items-center inner-margin-mobile pl-4 lg:pl-0">
             <p class="text-lg font-mono uppercase leading-none">
                 Marketing Is Changing Faster Than Ever, Adapt & Evolve Along With It
             </p>
         </div>
     </div>
 
-    <div class="grid-default py-8 pl-12 pr-12 border-t border-gray-900">
-        <div class="col-span-1 pl-8 flex items-center">
-            <p class="text-base mt-1 uppercase lg:text-red-500 font-mono leading-none">
+    <div class="grid-default py-8 outer-margin border-t border-gray-900 gap-y-2">
+        <div class="col-span-12 lg:col-span-1 inner-margin-mobile flex items-center pl-4">
+            <p class="text-base mt-1 uppercase text-red-500 font-mono leading-none">
                 05
             </p>
         </div>
 
-        <div class="col-span-3 flex items-center">
-            <h3 class="text-2xl uppercase lg:text-gray-900 leading-none font-medium">
+        <div class="col-span-3 flex items-center inner-margin-mobile pl-4 lg:pl-0">
+            <h3 class="text-2xl uppercase text-gray-900 leading-none font-medium mb-2 lg:mb-0">
                 (Brand) DNA
             </h3>
         </div>
         
-        <div class="col-span-12 lg:col-span-8 flex items-center">
+        <div class="col-span-12 lg:col-span-8 flex items-center inner-margin-mobile pl-4 lg:pl-0">
             <p class="text-lg font-mono uppercase leading-none">
                 Unlock what makes your brand a unique, one of a kind.
             </p>
