--- a/_includes/section/ourclients.njk
+++ b/_includes/section/ourclients.njk
@@ -1,8 +1,8 @@
 <section id="ourclients">
     <div class="mt-12 pt-8">
-        <div class="pl-12 pr-12">
-            <div class="col-span-12 lg:col-span-3 mb-6 pl-8 pr-8">
-                <h2 class="text-6xl uppercase font-medium">
+        <div class="outer-margin">
+            <div class="col-span-12 lg:col-span-3 mb-6 inner-margin">
+                <h2 class="">
                     Our clients
                 </h2>
             </div>
@@ -10,11 +10,11 @@
         </div>
     </div>
 
-    <div class="grid-default pl-12 pr-12 border-t border-b border-gray-900">
+    <div class="grid-default outer-margin border-t border-b border-gray-900">
 
        {% for client in collections.sortedClients %}
-            <div class="clients col-span-3 border-r border-b border-gray-900 py-16 px-24 justify-center flex h-52">
-                <img src="{{ client.data.img }}" alt="{{ client.data.name }}">
+            <div class="clients col-span-12 sm:col-span-6 md:col-span-4 lg:col-span-3 border-r-0 sm:border-r border-b border-gray-900 py-12 lg:py-12 px-12 md:px-24 justify-center flex sm:max-h-36 h-40 w-100">
+                <img class="" src="{{ client.data.img }}" alt="{{ client.data.name }}">
             </div>
         {% endfor %}
 
