--- a/index.njk
+++ b/index.njk
@@ -7,7 +7,7 @@ title: Veblen Giffen
 
 {% block content %}
 
-<div class="w-full mt-24 pl-12 pr-12 site-title">
+<div class="w-full mt-24 outer-margin site-title">
     <svg viewBox="0 0 1360 132" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M0.260742 2.37766H24.6867L57.2547 104.153L88.9377 2.37766H112.656L68.7597 130.703H44.6877L0.260742 2.37766Z" fill="#1C1C19"/>
         <path d="M127.474 130.703V2.37766H218.275V21.1397H149.953V55.4777H214.558V74.0627H149.953V111.764H218.275V130.703H127.474Z" fill="#1C1C19"/>
