--- a/_includes/section/cta.njk
+++ b/_includes/section/cta.njk
@@ -1,7 +1,7 @@
 <div class="grid-default bg-black pb-16">
     <div class="col-span-12 mt-12 pt-8">
-        <div class="pl-12 pr-12 grid grid-cols-12">
-            <div class="col-span-12 lg:col-span-7 mb-6 pl-8 pr-8">
+        <div class="outer-margin grid grid-cols-12">
+            <div class="col-span-12 lg:col-span-7 mb-6 inner-margin">
                 <h2 class="text-6xl uppercase text-white font-medium">
                     Let us help you Find your angle
                 </h2>
@@ -24,8 +24,8 @@
         </div>
     </div>
 
-    <div class="col-span-12 lg:col-span-8 pl-12 pr-12 ">
-        <div class="pl-8 pr-8 flex flex-col">
+    <div class="col-span-12 lg:col-span-8 outer-margin">
+        <div class="inner-margin flex flex-col">
             
             <div class="flex flex-col mt-8 space-y-4 sm:space-y-0 sm:space-x-4 sm:flex-row lg:mt-8 sm:px-0">
                 <a data-savvycal-embed class="btn btn-secondary" role="button" href="https://savvycal.com/ciaran/chat">
