--- a/_includes/section/testimonials.njk
+++ b/_includes/section/testimonials.njk
@@ -1,9 +1,9 @@
 <section id="capabilities">
 
-    <div class="grid-default pl-12 pr-12 border-gray-900 pb-20">
+    <div class="grid-default outer-margin border-gray-900 pb-20">
 
        {% for testimonial in collections.testimonial %}
-            <blockquote class="flex flex-col col-span-8 pt-16 px-8 justify-center items- -middle flex">
+            <blockquote class="flex flex-col col-span-12 sm:col-span-10 lg:col-span-8 pt-16 px-4 sm:px-8 justify-center items-middle flex">
                 
                 <p class="uppercase font-medium text-2xl leading-tight mb-4">
                     {{ testimonial.data.quote }}
