--- a/_includes/section/whowesupport.njk
+++ b/_includes/section/whowesupport.njk
@@ -1,8 +1,8 @@
 <section id="capabilities">
     <div class="mt-12 pt-8">
-        <div class="pl-12 pr-12">
-            <div class="col-span-12 lg:col-span-3 mb-6 pl-8 pr-8">
-                <h2 class="text-6xl uppercase font-medium">
+        <div class="outer-margin">
+            <div class="col-span-12 lg:col-span-3 mb-6 inner-margin">
+                <h2 class="">
                     Who we support
                 </h2>
             </div>
@@ -10,9 +10,9 @@
         </div>
     </div>
 
-    <div class="grid-default pl-12 pr-12 border-t border-b border-gray-900">
+    <div class="grid-default outer-margin border-t border-b border-gray-900">
         
-        <div class="col-span-4 border-r border-gray-900 p-8">
+        <div class="col-span-12 sm:col-span-4 border-b sm:border-b-0 border-r-0 sm:border-r border-gray-900 p-4 sm:p-8">
             <div class="mb-12">
                 <svg width="44" height="44" fill="none" xmlns="http://www.w3.org/2000/svg"><mask id="a" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="3" y="1" width="39" height="40"><path d="M3.142 1.506H41.77v38.868H25.95V16.996H3.142V1.507Z" fill="#ED704A"/></mask><g opacity=".15" stroke="#000" mask="url(#a)"><path transform="matrix(.70706 -.70715 .27868 .96044 -24.676 26.98)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -22.555 29.102)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -20.434 31.224)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -18.313 33.345)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -16.191 35.466)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -14.07 37.588)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -11.95 39.71)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -9.828 41.83)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -7.707 43.952)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -5.585 46.074)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -3.464 48.195)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -1.343 50.317)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 .778 52.438)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 2.899 54.56)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 5.02 56.68)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 7.142 58.802)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 9.263 60.924)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 11.384 63.045)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 13.505 65.167)" d="M0-.5h63.9"/></g><path d="M0 43.5h-1v1h1v-1Zm42.976-1H0v2h42.976v-2ZM1 43.5V.194h-2V43.5h2Z" fill="#000" mask="url(#path-21-inside-1_2092_97245)"/><path fill="#000" d="M3.012 19.258H24.27v21.258H3.012z"/><path stroke="#F0533C" d="M6.864 36.211 36.212 6.863"/></svg>
             </div>
@@ -28,7 +28,7 @@
             </p>
         </div>
 
-        <div class="col-span-4 border-r border-gray-900 p-8">
+        <div class="col-span-12 sm:col-span-4 border-b sm:border-b-0 border-r-0 sm:border-r border-gray-900 p-4 sm:p-8">
             <div class="mb-12">
                 <svg width="44" height="44" fill="none" xmlns="http://www.w3.org/2000/svg"><mask id="a" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="3" y="1" width="39" height="40"><path d="M3.142 1.506H41.77v38.868H25.95V16.996H3.142V1.507Z" fill="#ED704A"/></mask><g opacity=".15" stroke="#000" mask="url(#a)"><path transform="matrix(.70706 -.70715 .27868 .96044 -24.676 26.98)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -22.555 29.102)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -20.434 31.224)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -18.313 33.345)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -16.191 35.466)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -14.07 37.588)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -11.95 39.71)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -9.828 41.83)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -7.707 43.952)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -5.585 46.074)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -3.464 48.195)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -1.343 50.317)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 .778 52.438)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 2.899 54.56)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 5.02 56.68)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 7.142 58.802)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 9.263 60.924)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 11.384 63.045)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 13.505 65.167)" d="M0-.5h63.9"/></g><path d="M0 43.5h-1v1h1v-1Zm42.976-1H0v2h42.976v-2ZM1 43.5V.194h-2V43.5h2Z" fill="#000" mask="url(#path-21-inside-1_2092_97245)"/><path fill="#000" d="M3.012 19.258H24.27v21.258H3.012z"/><path stroke="#F0533C" d="M6.864 36.211 36.212 6.863"/></svg>
             </div>
@@ -43,7 +43,7 @@
             </p>
         </div>
 
-        <div class="col-span-4 border-r border-gray-900 p-8">
+        <div class="col-span-12 sm:col-span-4 border-r-none border-r-0 sm:border-r border-gray-900 p-4 sm:p-8">
             <div class="mb-12">
                 <svg width="44" height="44" fill="none" xmlns="http://www.w3.org/2000/svg"><mask id="a" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="3" y="1" width="39" height="40"><path d="M3.142 1.506H41.77v38.868H25.95V16.996H3.142V1.507Z" fill="#ED704A"/></mask><g opacity=".15" stroke="#000" mask="url(#a)"><path transform="matrix(.70706 -.70715 .27868 .96044 -24.676 26.98)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -22.555 29.102)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -20.434 31.224)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -18.313 33.345)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -16.191 35.466)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -14.07 37.588)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -11.95 39.71)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -9.828 41.83)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -7.707 43.952)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -5.585 46.074)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -3.464 48.195)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 -1.343 50.317)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 .778 52.438)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 2.899 54.56)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 5.02 56.68)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 7.142 58.802)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 9.263 60.924)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 11.384 63.045)" d="M0-.5h63.9"/><path transform="matrix(.70706 -.70715 .27868 .96044 13.505 65.167)" d="M0-.5h63.9"/></g><path d="M0 43.5h-1v1h1v-1Zm42.976-1H0v2h42.976v-2ZM1 43.5V.194h-2V43.5h2Z" fill="#000" mask="url(#path-21-inside-1_2092_97245)"/><path fill="#000" d="M3.012 19.258H24.27v21.258H3.012z"/><path stroke="#F0533C" d="M6.864 36.211 36.212 6.863"/></svg>
             </div>
