--- a/_includes/default.njk
+++ b/_includes/default.njk
@@ -18,6 +18,8 @@
 </head>
 
     <body>
+        <div class="horizontal-lines"></div>
+        <div class="content">
         {% include "component/menu.njk" %}
         
         {% block content %}
@@ -31,5 +33,6 @@
             {% include "component/grid.njk" %}
         </grid>
 
+        </div>
     </body>
 </html>
