--- a/_includes/section/footer.njk
+++ b/_includes/section/footer.njk
@@ -1,4 +1,6 @@
 <div class="relative bg-black">
+    <div class="horizontal-lines top-0"></div>
+    
     <div class="grid-default pb-16 relative">
         <div class="col-span-12 mt-12 pt-8">
             <div class="outer-margin grid grid-cols-12">
