--- a/_includes/section/video.njk
+++ b/_includes/section/video.njk
@@ -1,8 +1,9 @@
-<div class="">
+<div class="relative">
     <div class="video-container bg-green-500">
     </div>
+    <div class="horizontal-lines top-0"></div>
 
-    <div class="z-1 grid-on-green">
+    <div class="z-1 grid-on-green absolute top-0 w-full h-full">
         {% include "component/grid.njk" %}
     </div>
 </div>
