--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -37,6 +37,27 @@ body {
   position: relative;
 }
 
+
+.horizontal-lines {
+  margin-top: -1px;
+  z-index: 1;
+  height: 100%;
+  position: absolute;
+  z-index: 0;
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0.1) 1px, transparent 0);
+  background-size: 100% 8px;
+  width: 100%;
+}
+
+.bg-black .horizontal-lines {
+  background-image: linear-gradient(to bottom, rgba(255,255,255,0.1) 1px, transparent 0);
+}
+
+.content {
+  position: relative;
+  z-index: 10;
+}
+
 h2 {
   @apply text-4xl md:text-6xl uppercase font-medium !important;
 }
@@ -74,6 +95,7 @@ h2 {
   -ms-grid-rows: auto;
   grid-template-rows: auto;
 }
+
 @media (max-width: 640px) {
   .grid-columns {
     grid-template-columns: repeat(12, 1fr);
@@ -116,6 +138,7 @@ h2 {
 .grid-on-black .grid-columns-line:last-of-type {
   border-right: 1px solid rgba(255, 255, 255, .5);
 }
+
 
 /* END GRID */
 
