--- a/_includes/component/menu.njk
+++ b/_includes/component/menu.njk
@@ -1,4 +1,4 @@
-<div class="grid-default py-2.5 outer-margin border-b border-gray-900 gap-y-2">
+<div class="menu grid-default py-2.5 outer-margin border-b border-gray-900 gap-y-2">
     <div class="col-span-1 inner-margin-mobile flex items-center justify-center">
         <a href="/" class="">
             <span class="inline-flex align-middle">
@@ -9,13 +9,13 @@
         </a>
     </div>
 
-    <div class="col-span-10 flex items-center justify-center">
+    <div class="col-span-10 hidden sm:flex items-center justify-center">
         <p class="text-sm sm:text-lg font-mono uppercase leading-none">
-            <span class="hidden sm:flex">A contemporary communications company</span>
+            <span class="">A contemporary communications company</span>
         </h3>
     </div>
     
-    <div class="col-span-1 flex items-center justify-center mr-12 sm:mr-0">
+    <div class="col-span-1 col-start-6 sm:col-start-12 flex items-center justify-center sm:mr-0">
         <p class="text-lg font-mono uppercase leading-none">
             Menu
         </p>
