--- a/_includes/component/grid.njk
+++ b/_includes/component/grid.njk
@@ -5,11 +5,11 @@
     <div id="w-node-013b0a8ef39f-c26fb154" class="grid-columns-line"></div>
     <div id="w-node-013b0a8ef39f-c26fb154" class="grid-columns-line"></div>
     <div id="w-node-013b0a8ef39f-c26fb154" class="grid-columns-line"></div>
-    <div id="w-node-013b0a8ef39f-c26fb154" class="grid-columns-line"></div>
-    <div id="w-node-013b0a8ef39f-c26fb154" class="grid-columns-line"></div>
-    <div id="w-node-013b0a8ef39f-c26fb154" class="grid-columns-line"></div>
-    <div id="w-node-013b0a8ef39f-c26fb154" class="grid-columns-line"></div>
-    <div id="w-node-013b0a8ef39f-c26fb154" class="grid-columns-line"></div>
-    <div id="w-node-013b0a8ef39f-c26fb154" class="grid-columns-line"></div>
+    <div id="w-node-013b0a8ef39f-c26fb154" class="grid-columns-line  hidden sm:block"></div>
+    <div id="w-node-013b0a8ef39f-c26fb154" class="grid-columns-line  hidden sm:block"></div>
+    <div id="w-node-013b0a8ef39f-c26fb154" class="grid-columns-line hidden sm:block"></div>
+    <div id="w-node-013b0a8ef39f-c26fb154" class="grid-columns-line hidden sm:block"></div>
+    <div id="w-node-013b0a8ef39f-c26fb154" class="grid-columns-line hidden sm:block"></div>
+    <div id="w-node-013b0a8ef39f-c26fb154" class="grid-columns-line hidden sm:block"></div>
 </grid>
 
