--- a/_includes/section/footer.njk
+++ b/_includes/section/footer.njk
@@ -1,6 +1,6 @@
 <div class="relative bg-black">
     <div class="horizontal-lines top-0"></div>
-    
+
     <div class="grid-default pb-16 relative">
         <div class="col-span-12 mt-12 pt-8">
             <div class="outer-margin grid grid-cols-12">
@@ -31,9 +31,12 @@
             <div class="inner-margin flex flex-col">
                 
                 <div class="flex flex-col mt-8 space-y-4 sm:space-y-0 sm:space-x-4 sm:flex-row lg:mt-8 sm:px-0">
-                    <a data-savvycal-embed class="btn btn-secondary" role="button" href="https://savvycal.com/ciaran/chat">
-                        Book a call
-                    </a>
+                    
+                    <!-- Calendly link widget begin -->
+                    <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+                    <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+                    <a class="btn btn-secondary" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/veblengiffen/30min'});return false;">Book a call</a>
+                    <!-- Calendly link widget end -->
                 </div>
             </div>
         </div>
