--- a/_includes/component/menu.njk
+++ b/_includes/component/menu.njk
@@ -16,8 +16,8 @@
     </div>
     
     <div class="col-span-1 col-start-6 sm:col-start-12 flex items-center justify-center sm:mr-0">
-        <p class="text-lg font-mono uppercase leading-none">
-            Menu
-        </p>
+        <a href="#contact" class="text-lg font-mono uppercase leading-none">
+            Contact
+        </a>
     </div>
 </div>
