--- a/_includes/section/footer.njk
+++ b/_includes/section/footer.njk
@@ -1,4 +1,4 @@
-<div class="relative bg-black">
+<div id="contact" class="relative bg-black">
     <div class="horizontal-lines top-0"></div>
 
     <div class="grid-default pb-16 relative">
@@ -30,7 +30,7 @@
         <div class="col-span-12 lg:col-span-8 outer-margin ">
             <div class="inner-margin flex flex-col">
                 
-                <div class="flex flex-col mt-8 space-y-4 sm:space-y-0 sm:space-x-4 sm:flex-row lg:mt-8 sm:px-0">
+                <div class="flex mt-8 lg:mt-8 sm:px-0">
                     
                     <!-- Calendly link widget begin -->
                     <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
