--- a/_includes/component/menu.njk
+++ b/_includes/component/menu.njk
@@ -15,7 +15,7 @@
         </h3>
     </div>
     
-    <div class="col-span-1 col-start-6 sm:col-start-12 flex items-center justify-center sm:mr-0">
+    <div class="col-span-1  ml-5 sm:ml-0 text-right col-start-5 sm:col-start-12 flex items-center justify-between sm:mr-0">
         <a href="#contact" class="text-lg font-mono uppercase leading-none">
             Contact
         </a>
