--- a/_includes/section/ourclients.njk
+++ b/_includes/section/ourclients.njk
@@ -3,7 +3,7 @@
         <div class="outer-margin">
             <div class="col-span-12 lg:col-span-3 mb-6 inner-margin">
                 <h2 class="">
-                    Our clients
+                    Brands we've worked with
                 </h2>
             </div>
 
